Add performance analysis and robustness testing functions to notebook
- Implement functions to load deterministic backtest results and Monte Carlo simulation results.
- Add performance metrics calculation including total return, CAGR, Sharpe ratio, and more.
- Create visualization functions for equity curves, PnL histograms, and drawdowns.
- Introduce Monte Carlo metrics analysis and visualization.
- Analyze trade statistics and feature attribution for trades.
- Generate a comprehensive HTML report summarizing findings from deterministic and Monte Carlo analyses.

--- a/notebooks/02_Feature_Engineering_and_Exploration.ipynb
+++ b/notebooks/02_Feature_Engineering_and_Exploration.ipynb
@@ -368,7 +368,108 @@
    "id": "2c3297c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from src.data_ingestion.data_loader import load_csv_file\n",
+    "\n",
+    "def plot_feature_distributions(df, feature_cols, output_dir=None):\n",
+    "    \"\"\"\n",
+    "    Plot histograms for each feature.\n",
+    "    \"\"\"\n",
+    "    for col in feature_cols:\n",
+    "        plt.figure(figsize=(6, 4))\n",
+    "        sns.histplot(df[col].dropna(), kde=True, bins=50)\n",
+    "        plt.title(f\"Distribution of {col}\")\n",
+    "        if output_dir:\n",
+    "            plt.savefig(os.path.join(output_dir, f\"dist_{col}.png\"))\n",
+    "            plt.close()\n",
+    "        else:\n",
+    "            plt.show()\n",
+    "\n",
+    "def plot_feature_correlations(df, feature_cols, target_col=None, output_dir=None):\n",
+    "    \"\"\"\n",
+    "    Plot correlation matrix and feature-target correlations.\n",
+    "    \"\"\"\n",
+    "    corr = df[feature_cols].corr()\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    sns.heatmap(corr, annot=True, fmt=\".2f\", cmap=\"coolwarm\")\n",
+    "    plt.title(\"Feature Correlation Matrix\")\n",
+    "    if output_dir:\n",
+    "        plt.savefig(os.path.join(output_dir, \"feature_corr_matrix.png\"))\n",
+    "        plt.close()\n",
+    "    else:\n",
+    "        plt.show()\n",
+    "    if target_col and target_col in df.columns:\n",
+    "        target_corr = df[feature_cols + [target_col]].corr()[target_col].drop(target_col)\n",
+    "        print(\"Feature-Target Correlations:\")\n",
+    "        print(target_corr.sort_values(ascending=False))\n",
+    "\n",
+    "def plot_time_series(df, feature_cols, date_col='date', output_dir=None):\n",
+    "    \"\"\"\n",
+    "    Plot time series of features.\n",
+    "    \"\"\"\n",
+    "    for col in feature_cols:\n",
+    "        plt.figure(figsize=(12, 4))\n",
+    "        plt.plot(df[date_col], df[col])\n",
+    "        plt.title(f\"{col} over time\")\n",
+    "        plt.xlabel(\"Date\")\n",
+    "        plt.ylabel(col)\n",
+    "        if output_dir:\n",
+    "            plt.savefig(os.path.join(output_dir, f\"ts_{col}.png\"))\n",
+    "            plt.close()\n",
+    "        else:\n",
+    "            plt.show()\n",
+    "\n",
+    "def cross_sectional_analysis(df, feature_cols, ticker_col='ticker', date_col='date', snapshot_date=None):\n",
+    "    \"\"\"\n",
+    "    Analyze feature values across tickers at a given date.\n",
+    "    \"\"\"\n",
+    "    if snapshot_date is None:\n",
+    "        snapshot_date = df[date_col].max()\n",
+    "    snapshot = df[df[date_col] == snapshot_date]\n",
+    "    print(f\"Cross-sectional snapshot for {snapshot_date}:\")\n",
+    "    print(snapshot[[ticker_col] + feature_cols].describe())\n",
+    "\n",
+    "def preliminary_feature_importance(df, feature_cols, target_col):\n",
+    "    \"\"\"\n",
+    "    Estimate feature importance using correlation and a simple tree model.\n",
+    "    \"\"\"\n",
+    "    # Correlation\n",
+    "    corrs = df[feature_cols + [target_col]].corr()[target_col].drop(target_col)\n",
+    "    print(\"Correlation-based importance:\")\n",
+    "    print(corrs.sort_values(ascending=False))\n",
+    "\n",
+    "    # Tree-based (RandomForest)\n",
+    "    try:\n",
+    "        from sklearn.ensemble import RandomForestRegressor\n",
+    "        X = df[feature_cols].fillna(0)\n",
+    "        y = df[target_col].fillna(0)\n",
+    "        model = RandomForestRegressor(n_estimators=50, random_state=42)\n",
+    "        model.fit(X, y)\n",
+    "        importances = pd.Series(model.feature_importances_, index=feature_cols)\n",
+    "        print(\"RandomForest feature importances:\")\n",
+    "        print(importances.sort_values(ascending=False))\n",
+    "    except ImportError:\n",
+    "        print(\"scikit-learn not installed, skipping tree-based importance.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Example usage\n",
+    "    features_path = \"data/features/AAPL_ohlcv_features.csv\"\n",
+    "    df = load_csv_file(features_path)\n",
+    "    # Add your target variable (e.g., future returns) to df before running EDA\n",
+    "    feature_cols = [col for col in df.columns if \"momentum\" in col or \"volatility\" in col or \"volume\" in col]\n",
+    "    target_col = \"future_return\"  # Replace with your actual target column\n",
+    "\n",
+    "    plot_feature_distributions(df, feature_cols)\n",
+    "    plot_feature_correlations(df, feature_cols, target_col=target_col)\n",
+    "    plot_time_series(df, feature_cols, date_col='date')\n",
+    "    cross_sectional_analysis(df, feature_cols, ticker_col='ticker', date_col='date')\n",
+    "    preliminary_feature_importance(df, feature_cols, target_col)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,7 +485,26 @@
    "id": "a487f3d3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def calculate_forward_returns(df, price_col='adj_close', horizons=[1, 5, 20]):\n",
+    "    \"\"\"\n",
+    "    Calculate forward returns for given horizons.\n",
+    "    :param df: DataFrame with price_col\n",
+    "    :param price_col: str, column name for adjusted close price\n",
+    "    :param horizons: list of int, forward return horizons in days\n",
+    "    :return: DataFrame with new columns for each forward return\n",
+    "    \"\"\"\n",
+    "    df = df.copy()\n",
+    "    for h in horizons:\n",
+    "        # Forward return: (future_price - today_price) / today_price\n",
+    "        df[f'forward_return_{h}d'] = (df[price_col].shift(-h) - df[price_col]) / df[price_col]\n",
+    "    return df\n",
+    "\n",
+    "# Example usage:\n",
+    "df = calculate_forward_returns(df, price_col='adj_close', horizons=[1, 5, 20])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -400,7 +520,34 @@
    "id": "18919804",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "def time_series_split_save(df, date_col='date', train_frac=0.6, val_frac=0.2, test_frac=0.2, output_dir=\"data/processed\", base_filename=\"final_features\"):\n",
+    "    \"\"\"\n",
+    "    Chronologically split the dataset into train/val/test and save as Parquet.\n",
+    "    \"\"\"\n",
+    "    df = df.sort_values(date_col)\n",
+    "    n = len(df)\n",
+    "    train_end = int(n * train_frac)\n",
+    "    val_end = train_end + int(n * val_frac)\n",
+    "\n",
+    "    train = df.iloc[:train_end]\n",
+    "    val = df.iloc[train_end:val_end]\n",
+    "    test = df.iloc[val_end:]\n",
+    "\n",
+    "    os.makedirs(output_dir, exist_ok=True)\n",
+    "    train.to_parquet(os.path.join(output_dir, f\"{base_filename}_train.parquet\"), index=False)\n",
+    "    val.to_parquet(os.path.join(output_dir, f\"{base_filename}_val.parquet\"), index=False)\n",
+    "    test.to_parquet(os.path.join(output_dir, f\"{base_filename}_test.parquet\"), index=False)\n",
+    "    print(f\"Saved train/val/test splits to {output_dir}\")\n",
+    "\n",
+    "# Example usage:\n",
+    "# df = pd.read_parquet(\"data/processed/combined_features.parquet\")\n",
+    "# time_series_split_save(df, date_col='date', output_dir=\"data/processed\", base_filename=\"final_features\")"
+   ]
   }
  ],
  "metadata": {
