Fix report generation by including strengths, weaknesses, and future research in the HTML output

--- a/notebooks/05_Performance_Analysis_and_Robustness_Testing.ipynb
+++ b/notebooks/05_Performance_Analysis_and_Robustness_Testing.ipynb
@@ -528,7 +528,7 @@
     "    det_metrics = pd.read_csv(\"results/backtest_reports/deterministic_metrics.csv\").iloc[0].to_dict()\n",
     "    mc_metrics_df = pd.read_csv(\"results/monte_carlo_sims/monte_carlo_metrics.csv\")\n",
     "    det_summary, mc_summary, strengths, weaknesses, future = summarize_findings(det_metrics, mc_metrics_df)\n",
-    "    generate_html_report(det_summary, mc_summary,"
+    "    generate_html_report(det_summary, mc_summary, strengths, weaknesses, future)"
    ]
   }
  ],
