Fix main guard in data preprocessing notebook to ensure proper execution of data cleaning

--- a/notebooks/01_Data_Acquisition_and_Preprocessing.ipynb
+++ b/notebooks/01_Data_Acquisition_and_Preprocessing.ipynb
@@ -234,7 +234,8 @@
     "            cleaned_df.to_csv(cleaned_path, index=False)\n",
     "            print(f\"Cleaned and saved: {cleaned_path}\")\n",
     "\n",
-    "if __name__ =="
+    "if __name__ == \"__main__\":\n",
+    "    clean_all_raw_data()"
    ]
   },
   {
