Finished notebbook 01: Data Acquisition and Preprocessing

--- a/notebooks/01_Data_Acquisition_and_Preprocessing.ipynb
+++ b/notebooks/01_Data_Acquisition_and_Preprocessing.ipynb
@@ -93,8 +93,11 @@
     "    os.makedirs(save_dir, exist_ok=True)\n",
     "    for ticker in tickers:\n",
     "        df = yf.download(ticker, start=start, end=end, auto_adjust=False)\n",
-    "        df.to_csv(os.path.join(save_dir, f\"{ticker}_ohlcv.csv\"))\n",
-    "        print(f\"Saved {ticker} data to {save_dir}\")\n",
+    "        if df is not None and not df.empty:\n",
+    "            df.to_csv(os.path.join(save_dir, f\"{ticker}_ohlcv.csv\"))\n",
+    "            print(f\"Saved {ticker} data to {save_dir}\")\n",
+    "        else:\n",
+    "            print(f\"No data found for {ticker} in the given date range.\")\n",
     "\n",
     "def generate_mock_index_constituents(index_name, tickers, save_dir):\n",
     "    \"\"\"\n",
